Changed navbar to responsive google-like navbar, copied from sashatran.

--- a/simplewebsite.html
+++ b/simplewebsite.html
@@ -9,37 +9,15 @@
 
 <!-- NAVIBAR -->
   
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Raspal Seni</a>
-    </div>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+<div class="container">
+  <input type="checkbox" id="toggle" />
+    <label class="button" for="toggle"></label>
+  <nav class="nav">
+    <a href="http://raspal.org" target="_blank">About</a>
+    <a href="http://codepen.io/raspal/pens/public/" target="_blank">Home</a>
+    <a href="https://raspal.org/hireme/" target="_blank">Hire Me</a>
+  </nav>
+  </div>
 
 <!-- NAVIBAR -->
 
